@@ -1,2 +1,5 @@
 
+noinst_PROGRAMS = readdir_inode
+readdir_inode_SOURCES = readdir_inode.c
+
 TESTS = test_bindfs.rb
